--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -2,7 +2,7 @@
     <h3>Equipment</h3>
     <ol>
         <li *ngFor="let item of equipmentItems">
-            <!-- "Add to Cargo Hold" button goes here. -->
+            <button class="activeButton" (click)=addItem(item) [disabled]="item.mass + this.cargoMass > this.maximumAllowedMass || this.inactive" [class.default]="item.mass + this.cargoMass > this.maximumAllowedMass || this.inactive">Add to Cargo Hold</button>
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -16,7 +16,7 @@
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
-    <!-- Add the "Empty Hold" button here. -->
+    <p [class.nearMaxMass]="this.cargoMass + 200 >= this.maximumAllowedMass">Mass Budget Remaining: {{calculateMassRemaining()}} kg</p>
+    <p><button (click)=emptyHold()>Empty Hold</button></p>
 </div>
 
